assets/custom-base-overrides.css
body{
    overflow-x: hidden; 
    position: relative;
    width: 100%;
    padding-top: 70px;

    background-image: url('/assets/bg-right-comichive.png'), url('/assets/bg-left-comichive.png') !important;
    background-repeat: no-repeat ;
    background-position: left 0, right 0 ;
    background-size: auto;
}

.color-scheme-1{
    background-image: url('/assets/bg-right-comichive.png'), url('/assets/bg-left-comichive.png') !important;
    background-repeat: no-repeat ;
    background-position: left 0, right 0 ;
    background-size: auto;
}

.page-width{
    padding: 0 !important;
}

@media (max-width: 1024px) {
    body{
        background-image: none, url('/assets/bg-left-comichive.png') !important;
        padding-top: 51px;
        background-size: 60vw;
    } 

    .color-scheme-1{
        background-image: none, url('/assets/bg-left-comichive.png') !important;
        background-size: 70vw;
    }

    .page-width{
        padding: 0 30px !important;
    }

    .collection ul{
        column-gap: 20px !important;
    }

    .collection li{
        flex: 0 1 calc(50% - 20px);
        box-sizing: border-box;
    }
}

